<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="Delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="Save"
        app:showAsAction="ifRoom" />
</menu>